--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://USERNAME.github.io/my-app",
+"homepage": "https://anshulverma788.github.io/my-app",
   "name": "my-app",
   "private": true,
   "version": "0.0.0",
